force-app/main/default/objects/Error__c/fields/Causante__c.field-meta.xml
<CustomField>
    <fullName>Causante__c</fullName>
    <label>Causante</label>
    <length>255</length>
    <type>Text</type>
</CustomField>