force-app/main/default/objects/Error__c/fields/Clase__c.field-meta.xml
<CustomField>
    <fullName>Clase__c</fullName>
    <label>Clase</label>
    <type>TextArea</type>
</CustomField>