force-app/main/default/objects/Error__c/fields/CodigoError__c.field-meta.xml
<CustomField>
    <fullName>CodigoError__c</fullName>
    <label>Codigo Error</label>
    <length>255</length>
    <type>Text</type>
</CustomField>