force-app/main/default/objects/Error__c/fields/Metodo__c.field-meta.xml
<CustomField>
    <fullName>Metodo__c</fullName>
    <label>Metodo</label>
    <type>TextArea</type>
</CustomField>