force-app/main/default/objects/Error__c/fields/Organizacion__c.field-meta.xml
<CustomField>
    <fullName>Organizacion__c</fullName>
    <label>Organizacion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>