force-app/main/default/objects/Error__c/fields/UserFName__c.field-meta.xml
<CustomField>
    <fullName>UserFName__c</fullName>
    <label>User First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>