force-app/main/default/objects/Error__c/fields/UserProfileName__c.field-meta.xml
<CustomField>
    <fullName>UserProfileName__c</fullName>
    <label>User Profile Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>